save-az/manifests/etcd-host-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: host-etcd
  namespace: openshift-etcd
  annotations:
    alpha.installer.openshift.io/dns-suffix: azgov.rhocp.us
subsets:
- addresses:
  - ip: 192.0.2.1
    hostname: etcd-0
  - ip: 192.0.2.2
    hostname: etcd-1
  - ip: 192.0.2.3
    hostname: etcd-2
  ports:
  - name: etcd
    port: 2379
    protocol: TCP
